--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.super.app",
   "displayName": "Super Application",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Super Application description",
   "main": "index.js",
   "scripts": {
@@ -13,20 +13,29 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^10.1.2",
-    "cordova-plugin-camera": "^6.0.0",
-    "cordova-plugin-file": "^7.0.0",
-    "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer"
+    "@red-mobile/cordova-plugin-barcodescanner": "^9.1.0",
+    "cordova-android": "^13.0.0",
+    "cordova-plugin-android-permissions": "^0.10.0",
+    "cordova-plugin-camera": "^7.0.0",
+    "cordova-plugin-file": "^8.1.0",
+    "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer",
+    "cordova-plugin-inappbrowser": "^6.0.0"
   },
   "cordova": {
     "platforms": [
       "android"
     ],
     "plugins": {
+      "@red-mobile/cordova-plugin-barcodescanner": {
+        "ANDROIDX_LEGACY_SUPPORT_V4_VERSION": "1.0.0"
+      },
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.6.+"
-      }
+      },
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-android-permissions": {}
     }
   }
 }
